--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,15 +1,41 @@
-a {
-	color: #BA209B;
-	text-decoration: none;
-	&:hover {
-		color: #D424B1;
-	}
+html {
+	font-size: 62.5%;
+	color: #444;
 }
 
-/* paragraphs */
+h1, h2, h3, h4 {
+	margin: 0;
+	color: #444;
+}
+
+h1 {
+	font-size: 3.5rem;
+	line-height: 40px;
+	letter-spacing: 2px;
+	font-weight: 400;
+}
+
+h2 {
+	font-size: 1.5rem;
+	line-height: 20px;
+	letter-spacing: 1px;
+	font-weight: 400;
+	margin-bottom: 15px;
+}
 
 p {
-	line-height: 1.5;
+	margin: 0;
+	font-size: 1.2rem;
+	line-height: 20px;
+}
+
+a {
+	text-decoration: none;
+	color: #444;
+
+	&:hover {
+		color: #BBB;
+	}
 }
 
 /*blockquotes*/
