Thurs morning commit

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,6 +1,6 @@
 header {
 	width: 100%;
-	padding: 25px 50px 50px;
+	padding: 20px 50px 50px;
 }
 
 .nav-container {
@@ -14,7 +14,7 @@ header {
 
 .nav-container nav {
 	width: 100%;
-	padding: 25px;
+	padding: 25px 50px;
 	border: 5px solid $yellow;
 	display: flex;
 	flex-flow: row nowrap;
