--- a/sass/_frontpage.scss
+++ b/sass/_frontpage.scss
@@ -34,21 +34,27 @@ nav {
 	flex-grow: 1;
 	display: flex;
 	flex-flow: row nowrap;
-	// align-items: center;
+	align-items: flex-start;
 }
 
 .front-page-featured-content {
 	width: 40%;
-	height: 70%;
+	// height: 10%;
+	margin-top: 30px;
 	padding: 25px;
 	background: #FFF;
 	box-shadow: 0 10px 20px 0 rgba(0,0,0,.15);
+	// display: inline-block;
 }
 
 .front-page-featured-image {
 	width: 60%;
-	// height: 100%;
-	background: url(http://unsplash.it/1000/1000) no-repeat center;
+	height: 80%;
+	// background: url(http://unsplash.it/1000/1000) no-repeat center;
 	background-size: cover;
 	box-shadow: 0 10px 20px 0 rgba(0,0,0,.15);
+
+	img {
+		width: 100%;
+	}
 }
