--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,40 +1,41 @@
 html {
 	font-size: 62.5%;
-	color: #444;
+	color: $dark;
 }
 
 h1, h2, h3, h4 {
+	font-family: 'Roboto', sans-serif;
 	margin: 0;
-	color: #444;
+	color: $dark;
 }
 
 h1 {
-	font-size: 3.5rem;
+	font-size: 5rem;
 	line-height: 40px;
-	letter-spacing: 2px;
-	font-weight: 400;
+	font-weight: 900;
 }
 
 h2 {
-	font-size: 1.5rem;
-	line-height: 20px;
-	letter-spacing: 1px;
-	font-weight: 400;
-	margin-bottom: 15px;
+	font-size: 2.5rem;
+	line-height: 32px;
+	font-weight: 700;
 }
 
 p {
+	font-family: 'Lato', sans-serif;
 	margin: 0;
-	font-size: 1.2rem;
-	line-height: 20px;
+	font-size: 1.7rem;
+	font-weight: 300;
+	line-height: 25px;
+	color: #616569;
 }
 
 a {
 	text-decoration: none;
-	color: #444;
+	color: $dark;
 
 	&:hover {
-		color: #BBB;
+		color: $light;
 	}
 }
 
