--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -15,7 +15,7 @@ header {
 .nav-container nav {
 	width: 100%;
 	padding: 25px 50px;
-	border: 5px solid $yellow;
+	border: 5px solid $main;
 	display: flex;
 	flex-flow: row nowrap;
 	justify-content: space-between;
