--- a/sass/_frontpage.scss
+++ b/sass/_frontpage.scss
@@ -1,16 +1,3 @@
-// .landing {
-// 	width: 100vw;
-// 	height: 100vh;
-// 	background: $main;
-// 	position: fixed;
-// 	overflow: hidden;
-// 	display: flex;
-// 	justify-content: center;
-// 	align-items: center;
-// 	transition: all 1.5s ease-out;
-// 	z-index: 50;
-// }
-
 .front-page-header {
 	width: 100%;
 	height: 100vh;
@@ -52,9 +39,21 @@ nav {
 	margin-bottom: 100px;
 	display: flex;
 	flex-flow: row nowrap;
-	justify-content: space-between;
+	justify-content: flex-end;
 	align-items: center;
 	z-index: 10;
+}
+
+.front-page-logo {
+	position: absolute;
+	left: 15%;
+	z-index: 10;
+
+	-skrollr-animation-name: fp-logo;
+
+	h1 {
+		font-size: 10rem;
+	}
 }
 
 .blue-bar {
@@ -99,7 +98,7 @@ nav {
 
 .featured {
 	width: 100%;
-	height: 60vh;
+	height: 70vh;
 	padding: 50px 5%;
 	margin: 50px 0;
 	position: relative;
@@ -108,9 +107,12 @@ nav {
 
 .featured-photo {
 	width: 60%;
+	height: 100%;
 	position: absolute;
 	left: 0;
 	z-index: 5;
+	overflow: hidden;
+	box-shadow: 0 10px 20px 0 rgba(0,0,0,.1);
 
 	-skrollr-animation-name: fp-featured-photo;
 
@@ -177,8 +179,48 @@ nav {
 	width: 48%;
 	padding: 50px;
 	background: #FFF;
-	box-shadow: 0 10px 20px 0 rgba(0,0,0,.1);
-	// position: relative;
+	box-shadow: 0 10px 20px 0 rgba(0,0,0,.075);
+	position: relative;
 	// top: -50px;
 	z-index: 5;
+	transition:: all .25s;
+
+	&:hover {
+		box-shadow: 10px 10px 0 0 $main;
+	}
+}
+
+.blog-link {
+	position: absolute;
+	right: 125px;
+	z-index: 3;
+
+	-skrollr-animation-name: fp-to-blog;
+
+	h2 {
+		position: relative;
+		transition: all .15s;
+
+		&:hover {
+			color: $main;
+
+			&:after {
+				background: $dark;
+				right: -15px;
+			}
+		}
+
+		&:after {
+			content: "";
+			width: 120%;
+			height: 130%;
+			background: $main;
+			position: absolute;
+			top: 0px;
+			right: -5px;
+			z-index: -2;
+			transition: all .15s;
+		}
+	}
+
 }
