--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -33,9 +33,10 @@ p {
 a {
 	text-decoration: none;
 	color: $dark;
+	transition: all .2s;
 
 	&:hover {
-		color: $light;
+		color: $main2;
 	}
 }
 
